--- a/css/main.scss
+++ b/css/main.scss
@@ -1,19 +1,14 @@
-$title-font: bold 30px 'Roboto', sans-serif;
+$title-font: normal bold 30px/24px 'Roboto', sans-serif;
 $color: #2ecc71;
 $title-color: #566366;
 $text-color: #919191;
-$main-text: normal 18px 'Roboto', sans-serif;
+$main-text: normal normal 18px/30px 'Roboto', sans-serif;
 $bg: #f2f2f1;
-$root-font-size: 10px;
 
-
+// funtion px to rem
 @function rem($size) {
-    $remSize: $size / 16px;
+    $remSize: $size/ 16px;
     @return #{$remSize}rem;
-}
-
-html {
-    font-size: $root-font-size;
 }
 
 body {
@@ -30,28 +25,45 @@ h2 {
     text-transform: uppercase;   
 }
 
+.container {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 .section__main {
 
     display: flex;
 
-    &--bg {
+    &-bg {
         width: 100%;
         height: 1000px;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        background: url(../img/main.png);
+        background: url(../img/main.png) no-repeat;
         background-size: cover;
+
+        @media (max-width: 768px) {
+            height: 600px;
+            background-position-x: center;
+            
+        }
     }
 
-    &--title {
+    &-title {
         font-size: rem(60px);
         color: #fff;
         border: 1px solid #fff;
         border-right: none;
         border-left: none;
         margin-bottom: rem(55px);
+        text-transform: uppercase;
+        text-align: center;
+
+        @media (max-width: 768px)  {
+            font-size: rem(25px);
+        }
 
     }
 
@@ -78,6 +90,9 @@ h2 {
     justify-content: space-between;
     align-items: center;
     background: #252e30;
+    position: sticky;
+    top: 0;
+    height: rem(70px);
 
     .logo {
         display: flex;
@@ -86,6 +101,9 @@ h2 {
         &__title {
             color: #fff;
             text-transform: uppercase;
+            margin-left: rem(20px);
+            font: $title-font;
+
 
             &-green {
                 color: $color;
@@ -95,6 +113,10 @@ h2 {
     }
 
     .nav__menu {
+
+        @media (max-width: 768px) {
+            display: none;
+        }
        
         &-list {
             list-style-type: none;
@@ -119,28 +141,78 @@ h2 {
     }
 }
 
+// burger
+@media (max-wisth: 768px) {
+    
+}
+
+
 .section__advantages {
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-wrap: wrap;
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    &-block {
+        width: rem(400px);
+        margin: rem(150px) auto;
+
+        @media (max-width: 768px) {
+            width: 100%;
+            margin: rem(20px) auto;
+        }
+    }
 }
 
 .about {
     background: $bg;
     display: flex;
 
+    @media (max-width:768px) {
+        flex-wrap: wrap;
+        
+    }
+
+    &__img {
+        width: 100%;
+    }
+
     &__box {
         display: flex;
         justify-content: center;
         flex-direction: column;
         margin: 5%;
+        width: 50%;
+
+        @media (max-width:768px) {
+            width: 90%;
+            margin: auto;
+            
+        }
+
+        &-item {
+            display: flex;
+            align-items: flex-start;
+            margin: 20px 0;
+        }
 
         &-abilities {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-between;
+
         }
 
         &-ability {
             display: flex;
+            flex-direction: column;
+            width: 200px;
+            margin-left: 20px;
         }
 
         &-title {
@@ -150,6 +222,34 @@ h2 {
             text-transform: uppercase;   
         }
 
+    }
+
+}
+
+.skills {
+    display: flex;
+    justify-content: space-around;
+
+    &__text {
+        width: 40%;
+    }
+
+    &__link {
+        display: inline-block;
+        text-decoration: none;
+        border: 1px solid $color;
+        padding: rem(20px);
+        margin: rem(15px) 0;
+        color: $color;
+        font-weight: bold;
+        font-size: rem(18px);
+        text-transform: uppercase;
+    }
+
+    &__link:hover {
+        color: white;
+        border: 1px solid $color;
+        transition: all .3s;
     }
 
 }
