--- a/css/main.css
+++ b/css/main.css
@@ -323,8 +323,8 @@ h3 {
 }
 
 .skills__link:hover {
-  color: white;
-  border: 1px solid #2ecc71;
+  color: #919191;
+  border: 1px solid #919191;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
@@ -374,5 +374,71 @@ h3 {
 
 .progress__low {
   width: 70%;
+}
+
+.resume {
+  background-color: #f2f2f1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  text-align: center;
+  padding: 6.25rem 0;
+}
+
+.resume P {
+  width: 70%;
+}
+
+@media (max-width: 768px) {
+  .resume P {
+    width: 90%;
+  }
+}
+
+.resume:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  border: 20px solid transparent;
+  border-top: 20px solid #f2f2f1;
+  bottom: -35px;
+  left: 49%;
+}
+
+.resume__link {
+  display: inline-block;
+  text-decoration: none;
+  border: 1px solid #2ecc71;
+  padding: 1.25rem;
+  margin: 0.9375rem 0;
+  color: #2ecc71;
+  font-weight: bold;
+  font-size: 1.125rem;
+  text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .resume__link {
+    width: 85%;
+    text-align: center;
+  }
+}
+
+.resume__link:hover {
+  color: #919191;
+  border: 1px solid #919191;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 /*# sourceMappingURL=main.css.map */
