add my education

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 
 p {
   color: #919191;
+  font: normal normal 18px/30px "Roboto", sans-serif;
 }
 
 h2 {
@@ -441,5 +442,35 @@ h3 {
   border: 1px solid #919191;
   -webkit-transition: all .3s;
   transition: all .3s;
+}
+
+.education {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  margin: 6.25rem auto;
+}
+
+.education__description {
+  width: 40%;
+}
+
+.education__experience-title {
+  border-bottom: 1px solid #919191;
+  padding-bottom: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.education__experience-gpa {
+  background-color: #2ecc71;
+  width: 5rem;
+  text-align: center;
+  font: normal normal 18px/30px "Roboto", sans-serif;
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
