--- a/css/main.scss
+++ b/css/main.scss
@@ -384,6 +384,8 @@ h3 {
     }
 
     &__experience {
+        width: 40%;
+        
 
         &-title {
             border-bottom: 1px solid $text-color;
