--- a/css/main.scss
+++ b/css/main.scss
@@ -382,21 +382,42 @@ h3 {
     flex-direction: column;
     margin: rem(100px) auto;
 
+    @media (max-width:768px) {
+        width: 90%;
+    }
+
     &__section {
         display: flex;;
         justify-content: space-around;
         align-items: baseline;
-        border-bottom: 1px solid $text-color;
-        padding-bottom: rem(50px);
-        margin-bottom: rem(50px);
+
+        @media (max-width:768px) {
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        &:first-child {
+            border-bottom: 1px solid $text-color;
+            padding-bottom: rem(100px);
+            margin-bottom: rem(100px);
+        }
+
+
     }
 
     &__description {
         width: 40%;
+        @media (max-width:768px) {
+            width: 100%;
+        }
     }
 
     &__experience {
         width: 40%;
+
+        @media (max-width:768px) {
+            width: 100%;
+        }
 
         &-title {
             border-bottom: 1px solid $text-color;
