--- a/css/main.scss
+++ b/css/main.scss
@@ -217,6 +217,11 @@ h3 {
             display: flex;
             align-items: flex-start;
             margin: 20px 0;
+            width: 50%;
+            @media (max-width:768px) {
+               width: 100%;
+                
+            }
         }
 
         &-abilities {
@@ -231,6 +236,10 @@ h3 {
             flex-direction: column;
             width: 200px;
             margin-left: 20px;
+            @media (max-width:768px) {
+                width: 100%;
+                 
+             }
         }
 
         &-title {
